Completed the overview slide deck - added replication example and fixed a typo in index.

--- a/src/site/resources/slides/falcon-user-guide.html
+++ b/src/site/resources/slides/falcon-user-guide.html
@@ -40,11 +40,15 @@
     <ol>
         <li>
             <p>Clone the project</p>
-            <p><code>git clone https://git-wip-us.apache.org/repos/asf/incubator-falcon.git</code></p>
+            <pre><code>git clone https://git-wip-us.apache.org/repos/asf/incubator-falcon.git</code></pre>
         </li>
         <li>
             <p>Compile the project</p>
-            <p><code>mvn -DskipTests clean package</code></p>
+            <pre><code>mvn -DskipTests clean package</code></pre>
+        </li>
+        <li>
+            <p>Optionally run the tests</p>
+            <pre><code>mvn test</code></pre>
         </li>
     </ol>
 </section>
